Resolve the issue of overlapping text

--- a/assets/collapsible-content.css
+++ b/assets/collapsible-content.css
@@ -131,6 +131,7 @@
     font-size: calc(var(--font-heading-scale) * 20px);
     font-weight: var(--font-weight);
     margin-top:8px;
+  word-break: break-word;
 }
 .faq-answer {
   margin-top: 0.5rem;
@@ -138,7 +139,7 @@
     font-style: var(--font-body-style);
     font-weight: var(--font-body-weight);
     font-size: calc(var(--font-body-scale) * 16px);
-
+word-break: break-word;
   line-height: 1.5;
   overflow: hidden;
   max-height: 0;
